scanner page refreshes and gain is via config

--- a/config/scanner.conf
+++ b/config/scanner.conf
@@ -2,5 +2,6 @@
     squelch => 80,
     ppm => 0,
     mode => 'am',
-    group => '%ATC%' # '%FRS%'
+    group => '%ATC%', # '%FRS%'
+    gain => 28.0
 }
