changes in how frequencies are managed

--- a/config/scanner.conf
+++ b/config/scanner.conf
@@ -1,8 +1,9 @@
 {
     squelch => 80,
     ppm => 0,
-    mode => 'am',
-    group => '%ATC%', # '%FRS%'
+    mode => 'fm',
+    banks => [ 'FRS' ],
+    #banks => [ 'ATC', 'FRS' ],
     gain => 48.0
     # gain => 28.0
 }
