config change mostly

--- a/config/scanner.conf
+++ b/config/scanner.conf
@@ -1,8 +1,8 @@
 {
     squelch => 80,
     ppm => 0,
-    mode => 'fm',
-    banks => [ 'FRS' ],
+    mode => 'am',
+    banks => [ 'ATC' ],
     #banks => [ 'ATC', 'FRS' ],
     gain => 48.0
     # gain => 28.0
