.gitignore and config comment

--- a/config/scanner.conf
+++ b/config/scanner.conf
@@ -1,7 +1,7 @@
 {
     squelch => 80,
     ppm => 0,
-    mode => 'am',
+    mode => 'am',  # fm or am
     banks => [ 'ATC' ],
     #banks => [ 'ATC', 'FRS' ],
     #gain => 48.0
