attempts to get right gain setting for june race

--- a/config/scanner.conf
+++ b/config/scanner.conf
@@ -3,7 +3,12 @@
     ppm => 0,
     mode => 'am',  # fm or am
     banks => [ 'ATC' ],
-    #banks => [ 'ATC', 'FRS' ],
+    #banks => [ 'RAMERICA' ],
+    #banks => [ 'ATC', 'FRS', 'CB', 'ALMS', 'RAMERICA'],
+    gain => 48.0
     #gain => 48.0
-    gain => 28.0
+#    gain => 12.0
+    #gain => 34.0   # tried number that matched gqrx but had tinny problem.  Raised to 34.
+    #gain => 34.0   # worked at the hotel (most recent)
+    #gain => 28.0   # worked at the hotel
 }
