--- a/config/scanner.conf
+++ b/config/scanner.conf
@@ -1,12 +1,13 @@
 {
     squelch => 80,
     ppm => 0,
-    mode => 'am',  # fm or am
-    banks => [ 'ATC' ],
-    #banks => [ 'RAMERICA' ],
+    mode => 'fm',  # fm or am
+    #banks => [ 'ATC' ],
+    banks => [ 'RAMERICA', 'ALMS' ],
     #banks => [ 'ATC', 'FRS', 'CB', 'ALMS', 'RAMERICA'],
-    gain => 48.0
+    #gain => 8.0
     #gain => 48.0
+    gain => 48.0
 #    gain => 12.0
     #gain => 34.0   # tried number that matched gqrx but had tinny problem.  Raised to 34.
     #gain => 34.0   # worked at the hotel (most recent)
