made config modular

--- a/config/scanner.conf
+++ b/config/scanner.conf
@@ -1,13 +1,37 @@
 {
-    squelch => 80,
-    ppm => 0,
-    mode => 'fm',  # fm or am
-    #banks => [ 'ATC' ],
-    banks => [ 'RAMERICA', 'ALMS' ],
-    #banks => [ 'ATC', 'FRS', 'CB', 'ALMS', 'RAMERICA'],
+    #squelch => 80,    # ham2mon controls this
+    #ppm => 0,         # ham3mon controls this
+    #mode => 'fm',  # fm or am      ham2mon controls this
+
+    width => 1000000, # needs to match what ham2mon is set for
+    rate => 7,
+
+    default_setup => 'IMSA event',
+    setups => {
+            'IMSA event' => {
+                base_freq => 465000000,
+                range => 10000000,    # if rate is > 0 move through this range
+	    },
+            'ATC' => {
+                base_freq => 465000000,
+                range => 10000000,    # if rate is > 0 move through this range
+             },
+            'FRS 8-14' => {
+                base_freq => 467600000,
+	    },
+    },
+
+#    base_freq => 460000000,
+#    range => 20000000,
+#    rate => 7,   # set to 0 to stay on base_freq
+    # first item in list is the default to be used if new freq is found
+    banks => [ 'MNTP', 'ATC' ],
+    #banks => [ 'ELKHART', 'RAMERICA', 'ALMS' ],    # this loiks like IMSA @ RA
+    #banks => [ 'MNTP' ],
+    #banks => [ 'MNTP', 'ATC', 'FRS', 'CB', 'ALMS', 'RAMERICA'],
     #gain => 8.0
     #gain => 48.0
-    gain => 48.0
+    #gain => 48.0    ham2mon controls this
 #    gain => 12.0
     #gain => 34.0   # tried number that matched gqrx but had tinny problem.  Raised to 34.
     #gain => 34.0   # worked at the hotel (most recent)
