initial integration of voice detection

--- a/config/scanner.conf
+++ b/config/scanner.conf
@@ -6,16 +6,19 @@
     width => 1000000, # needs to match what ham2mon is set for
     rate => 7,
 
-    default_setup => 'IMSA event',
+    default_setup => 'active FM',
     setups => {
             'IMSA event' => {
                 base_freq => 465000000,
-                range => 10000000,    # if rate is > 0 move through this range
+                range => 10000000,    # interate through this range centered at base_freq
 	    },
             'ATC' => {
                 base_freq => 465000000,
-                range => 10000000,    # if rate is > 0 move through this range
+                range => 10000000,
              },
+            'active FM' => {
+                base_freq => 460400000,
+	    },
             'FRS 8-14' => {
                 base_freq => 467600000,
 	    },
