config and doc changes only

--- a/config/scanner.conf
+++ b/config/scanner.conf
@@ -6,21 +6,38 @@
     width => 1000000, # needs to match what ham2mon is set for
     rate => 7,
 
-    default_setup => 'active FM',
+#    default_setup => 'IMSA event',
+#    default_setup => 'skywarn',
+#    default_setup => 'active FM',  # police radio and stuff around the house
+    default_setup => 'FRS 8-14',
     setups => {
             'IMSA event' => {
                 base_freq => 465000000,
                 range => 10000000,    # interate through this range centered at base_freq
 	    },
+            'June sprints' => {
+                base_freq => 464000000,
+                range => 8000000,    # interate through this range centered at base_freq
+	    },
             'ATC' => {
                 base_freq => 465000000,
                 range => 10000000,
              },
+            'local storm spotting' => {
+                base_freq => 154500000,
+                range => 3000000,
+             },
             'active FM' => {
                 base_freq => 460400000,
+		range => 0,
 	    },
             'FRS 8-14' => {
                 base_freq => 467600000,
+		range => 0,
+	    },
+            'skywarn' => {
+                base_freq => 442625000,
+		range => 0,
 	    },
     },
 
@@ -28,9 +45,13 @@
 #    range => 20000000,
 #    rate => 7,   # set to 0 to stay on base_freq
     # first item in list is the default to be used if new freq is found
-    banks => [ 'MNTP', 'ATC' ],
-    #banks => [ 'ELKHART', 'RAMERICA', 'ALMS' ],    # this loiks like IMSA @ RA
-    #banks => [ 'MNTP' ],
+    # probably have the default be a geographic region
+    #banks => [ 'MNTP', 'ATC' ],
+
+    #banks => [ 'ELKHART', 'RAMERICA', 'ALMS' ],    # this is IMSA @ RA 2017/2018 useage
+    #banks => [ 'ELKHART', 'RAMERICA', 'JSPRINTS' ],    # June Sprints
+
+    banks => [ 'MNTP' ],
     #banks => [ 'MNTP', 'ATC', 'FRS', 'CB', 'ALMS', 'RAMERICA'],
     #gain => 8.0
     #gain => 48.0
