--- a/config/scanner.conf
+++ b/config/scanner.conf
@@ -9,6 +9,7 @@
 #    default_setup => 'IMSA event',
 #    default_setup => 'skywarn',
 #    default_setup => 'active FM',  # police radio and stuff around the house
+#    default_setup => 'June sprints',
     default_setup => 'FRS 8-14',
     setups => {
             'IMSA event' => {
