--- a/config/scanner.conf
+++ b/config/scanner.conf
@@ -1,4 +1,6 @@
 {
+    audio_src => '/cart/ham2mon/apps/wav',
+    audio_dst => '/cart/rtl_fm-scanner/work',   # put trimmed audio files here
     #squelch => 80,    # ham2mon controls this
     #ppm => 0,         # ham3mon controls this
     #mode => 'fm',  # fm or am      ham2mon controls this
@@ -8,9 +10,9 @@
 
 #    default_setup => 'IMSA event',
 #    default_setup => 'skywarn',
-#    default_setup => 'active FM',  # police radio and stuff around the house
+    default_setup => 'active FM',  # police radio and stuff around the house
 #    default_setup => 'June sprints',
-    default_setup => 'FRS 8-14',
+#    default_setup => 'FRS 8-14',
     setups => {
             'IMSA event' => {
                 base_freq => 465000000,
