added error handling to screen call

--- a/config/scanner.conf
+++ b/config/scanner.conf
@@ -10,9 +10,9 @@
 
 #    default_setup => 'IMSA event',
 #    default_setup => 'skywarn',
-    default_setup => 'active FM',  # police radio and stuff around the house
+#    default_setup => 'active FM',  # police radio and stuff around the house
 #    default_setup => 'June sprints',
-#    default_setup => 'FRS 8-14',
+    default_setup => 'FRS 8-14',
     setups => {
             'IMSA event' => {
                 base_freq => 465000000,
