change location of audio files and startup script

--- a/config/scanner.conf
+++ b/config/scanner.conf
@@ -1,5 +1,5 @@
 {
-    audio_src => '/cart/ham2mon/apps/wav',
+    audio_src => '/cart/data/wav',
     audio_dst => '/cart/rtl_fm-scanner/work',   # put trimmed audio files here
     #squelch => 80,    # ham2mon controls this
     #ppm => 0,         # ham3mon controls this
