updates for airspy

--- a/config/scanner.conf
+++ b/config/scanner.conf
@@ -5,14 +5,13 @@
     #ppm => 0,         # ham3mon controls this
     #mode => 'fm',  # fm or am      ham2mon controls this
 
-    width => 1000000, # needs to match what ham2mon is set for
+    width => 3000000, # needs to match what ham2mon is set for
     rate => 7,
 
-#    default_setup => 'IMSA event',
+    default_setup => 'IMSA event',
 #    default_setup => 'skywarn',
 #    default_setup => 'active FM',  # police radio and stuff around the house
 #    default_setup => 'June sprints',
-    default_setup => 'FRS 8-14',
     setups => {
             'IMSA event' => {
                 base_freq => 465000000,
@@ -38,6 +37,10 @@
                 base_freq => 467600000,
 		range => 0,
 	    },
+            'FRS range test' => {
+                base_freq => 466000000,
+		range => 6000000,
+	    },
             'skywarn' => {
                 base_freq => 442625000,
 		range => 0,
@@ -51,11 +54,11 @@
     # probably have the default be a geographic region
     #banks => [ 'MNTP', 'ATC' ],
 
-    #banks => [ 'ELKHART', 'RAMERICA', 'ALMS' ],    # this is IMSA @ RA 2017/2018 useage
+    banks => [ 'ELKHART', 'RAMERICA', 'ALMS' ],    # this is IMSA @ RA 2017/2018 useage
     #banks => [ 'ELKHART', 'RAMERICA', 'JSPRINTS' ],    # June Sprints
+    #banks => [ 'MNTP' ],  # hanging out
 
-    banks => [ 'MNTP' ],
-    #banks => [ 'MNTP', 'ATC', 'FRS', 'CB', 'ALMS', 'RAMERICA'],
+#banks => [ 'MNTP', 'ATC', 'FRS', 'CB', 'ALMS', 'RAMERICA'],
     #gain => 8.0
     #gain => 48.0
     #gain => 48.0    ham2mon controls this
