basics of ml working

--- a/config/scanner.conf
+++ b/config/scanner.conf
@@ -8,9 +8,9 @@
     width => 3000000, # needs to match what ham2mon is set for
     rate => 7,
 
-    default_setup => 'IMSA event',
+#    default_setup => 'IMSA event',
 #    default_setup => 'skywarn',
-#    default_setup => 'active FM',  # police radio and stuff around the house
+    default_setup => 'active FM',  # police radio and stuff around the house
 #    default_setup => 'June sprints',
     setups => {
             'IMSA event' => {
@@ -54,9 +54,9 @@
     # probably have the default be a geographic region
     #banks => [ 'MNTP', 'ATC' ],
 
-    banks => [ 'ELKHART', 'RAMERICA', 'ALMS' ],    # this is IMSA @ RA 2017/2018 useage
+    #banks => [ 'ELKHART', 'RAMERICA', 'ALMS' ],    # this is IMSA @ RA 2017/2018/2019 useage
     #banks => [ 'ELKHART', 'RAMERICA', 'JSPRINTS' ],    # June Sprints
-    #banks => [ 'MNTP' ],  # hanging out
+    banks => [ 'MNTP' ],  # hanging out
 
 #banks => [ 'MNTP', 'ATC', 'FRS', 'CB', 'ALMS', 'RAMERICA'],
     #gain => 8.0
