--- a/config/scanner.conf
+++ b/config/scanner.conf
@@ -1,9 +1,9 @@
 {
+    pg         => 'postgresql://script@/cart',
+    params_dir => '/cart/xmit_mxnet',
+
     audio_src => '/cart/data/wav',
     audio_dst => '/cart/rtl_fm-scanner/work',   # put trimmed audio files here
-    #squelch => 80,    # ham2mon controls this
-    #ppm => 0,         # ham3mon controls this
-    #mode => 'fm',  # fm or am      ham2mon controls this
 
     width => 3000000, # needs to match what ham2mon is set for
     rate => 7,
