--- a/config/scanner.conf
+++ b/config/scanner.conf
@@ -1,6 +1,7 @@
 {
-    pg         => 'postgresql://script@/cart',
-    params_dir => '/cart/xmit_mxnet',
+    pg          => 'postgresql://script@/cart',
+    params_dir  => '/cart/xmit_mxnet',
+    use_lockout => 0,
 
     audio_src => '/cart/data/wav',
     audio_dst => '/cart/rtl_fm-scanner/work',   # put trimmed audio files here
