test for small audio files earlier on

--- a/config/scanner.conf
+++ b/config/scanner.conf
@@ -1,7 +1,7 @@
 {
     pg          => 'postgresql://script@/cart',
     params_dir  => '/cart/xmit_mxnet',
-    use_lockout => 0,
+    use_lockout => 0,  # lockout file will keep passed frequencies from being demodulated
 
     audio_src => '/cart/data/wav',
     audio_dst => '/cart/rtl_fm-scanner/work',   # put trimmed audio files here
