use redesigned TransmissionIdentifer

--- a/config/scanner.conf
+++ b/config/scanner.conf
@@ -1,7 +1,12 @@
 {
     pg          => 'postgresql://script@/cart',
-    params_dir  => '/cart/xmit_mxnet',
+
+    # mxnet classification
+    params      => '/cart/xmit_mxnet/xmit.params',
+    labels      => '/cart/xmit_mxnet/labels.txt',
+
     use_lockout => 0,  # lockout file will keep passed frequencies from being demodulated
+                       # should not be needed to ML classification working
 
     audio_src => '/cart/data/wav',
     audio_dst => '/cart/rtl_fm-scanner/work',   # put trimmed audio files here
