config changes mostly

--- a/config/scanner.conf
+++ b/config/scanner.conf
@@ -1,15 +1,10 @@
 {
     pg          => 'postgresql://script@/cart',
 
-    # mxnet classification
-    params      => '/cart/xmit_mxnet/xmit.params',
-    labels      => '/cart/xmit_mxnet/labels.txt',
-
     use_lockout => 0,  # lockout file will keep passed frequencies from being demodulated
                        # should not be needed to ML classification working
 
     audio_src => '/cart/data/wav',
-    audio_dst => '/cart/rtl_fm-scanner/work',   # put trimmed audio files here
 
     width => 3000000, # needs to match what ham2mon is set for
     rate => 7,
@@ -58,6 +53,7 @@
 #    rate => 7,   # set to 0 to stay on base_freq
     # first item in list is the default to be used if new freq is found
     # probably have the default be a geographic region
+    # change xmit_processor bank config to match what is here!
     #banks => [ 'MNTP', 'ATC' ],
 
     #banks => [ 'ELKHART', 'RAMERICA', 'ALMS' ],    # this is IMSA @ RA 2017/2018/2019 useage
