--- a/config/scanner.conf
+++ b/config/scanner.conf
@@ -11,8 +11,8 @@
 
 #    default_setup => 'IMSA event',
 #    default_setup => 'skywarn',
-    default_setup => 'active FM',  # police radio and stuff around the house
-#    default_setup => 'June sprints',
+#    default_setup => 'active FM',  # police radio and stuff around the house
+    default_setup => 'June sprints',
     setups => {
             'IMSA event' => {
                 base_freq => 465000000,
@@ -48,17 +48,17 @@
 	    },
     },
 
-#    base_freq => 460000000,
-#    range => 20000000,
-#    rate => 7,   # set to 0 to stay on base_freq
+    #
+    # NOTICE: change xmit_processor bank config to match what is here!
+    #
+
     # first item in list is the default to be used if new freq is found
     # probably have the default be a geographic region
-    # change xmit_processor bank config to match what is here!
     #banks => [ 'MNTP', 'ATC' ],
 
     #banks => [ 'ELKHART', 'RAMERICA', 'ALMS' ],    # this is IMSA @ RA 2017/2018/2019 useage
-    #banks => [ 'ELKHART', 'RAMERICA', 'JSPRINTS' ],    # June Sprints
-    banks => [ 'MNTP' ],  # hanging out
+    banks => [ 'ELKHART', 'RAMERICA', 'JSPRINTS' ],    # June Sprints
+    #banks => [ 'MNTP' ],  # hanging out
 
 #banks => [ 'MNTP', 'ATC', 'FRS', 'CB', 'ALMS', 'RAMERICA'],
     #gain => 8.0
