--- a/config/scanner.conf
+++ b/config/scanner.conf
@@ -1,8 +1,8 @@
 {
     pg          => 'postgresql://script@/cart',
 
-    use_lockout => 0,  # lockout file will keep passed frequencies from being demodulated
-                       # should not be needed to ML classification working
+    use_lockout => 1,  # lockout file will keep passed frequencies from being demodulated
+                       # may not be needed with ML classification working
 
     audio_src => '/cart/data/wav',
 
@@ -11,8 +11,8 @@
 
 #    default_setup => 'IMSA event',
 #    default_setup => 'skywarn',
-#    default_setup => 'active FM',  # police radio and stuff around the house
-    default_setup => 'June sprints',
+    default_setup => 'active FM',  # police radio and stuff around the house
+#    default_setup => 'June sprints',
     setups => {
             'IMSA event' => {
                 base_freq => 465000000,
@@ -57,8 +57,8 @@
     #banks => [ 'MNTP', 'ATC' ],
 
     #banks => [ 'ELKHART', 'RAMERICA', 'ALMS' ],    # this is IMSA @ RA 2017/2018/2019 useage
-    banks => [ 'ELKHART', 'RAMERICA', 'JSPRINTS' ],    # June Sprints
-    #banks => [ 'MNTP' ],  # hanging out
+    #banks => [ 'ELKHART', 'RAMERICA', 'JSPRINTS' ],    # June Sprints
+    banks => [ 'MNTP' ],  # hanging out
 
 #banks => [ 'MNTP', 'ATC', 'FRS', 'CB', 'ALMS', 'RAMERICA'],
     #gain => 8.0
